--- a/site-plan.html
+++ b/site-plan.html
@@ -1,12 +1,249 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<html lang="en-us">
     
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Site Plan</title>
+    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+  </head>
+
+  <body>
+    <header>
+      <h1>Portfolio Site Plan</h1>
+      <h2>Jan Zander</h2>
+      <h2>WDD 130-B8</h2>
+      <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
+    </header>
+    <main>
+
+      <!-- ------------------------Steps 2-3------------------------------ -->
+      <hr>
+      <h2>Overview</h2>
+      <h3>Purpose</h3>
+      <p>This will be a webpage I can use as a portfolio to whoever wants to see my skills and work I have already done.</p>  <!-- change this -->
+
+
+      <h3>Audience</h3>
+      <p>My audience is mostly potential employers and/or clients.</p>  <!-- change this -->
+
+      <hr>
+      <h2>Branding</h2>
+      <h3>Website Logo</h3>
+      <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
+      <img src="images/logo_dark.png" alt="Logo image">
+      <hr>
+      <h2>
+        Style Guide
+      </h2>
+
+      <!-- ------------------------Steps 4-8------------------------------ -->
+
+      <h3>
+        Color Palette
+      </h3>
+      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
+
+      <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
+      Palette URL: <a href="https://coolors.co/3c3d42-11270b-dff3e3-efaf8e" target="_blank">https://coolors.co/3c3d42-11270b-dff3e3-efaf8e</a>
+
+
+      <table class="colors">
+        <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
+        <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+        <tr><td class="primary">[#3C3D42]</td><td class="secondary">[#11270B]</td><td class="accent1">[#DFF3E3]</td><td class="accent2">[#EFAF8E]</td></tr>
+      </table>
+
+      <!-- ------------------------Step 9------------------------------ -->
+
+      <h3>
+        Typography
+      </h3>
+      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
+
+      <h4>
+        Heading Font: Oswald  <!-- change this -->
+      </h4>
+      <h4>
+        Paragraph Font: Cutive Mono  <!-- change this -->
+      </h4>
+      <h3>
+        Normal paragraph example
+      </h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+      <h3>
+        Colored paragraph example
+      </h3>
+      <p class="colored">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+      </p>
+
+      <!-- ------------------------Step 10------------------------------ -->
+
+      <h3>
+        Navigation
+      </h3>
+      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">Resume</a>
+        <a href="#">Projects</a>
+      </nav>
+      <hr>
+      <h2>
+        Site Map
+      </h2>
+      <div class="sitemap">
+        <div class="sm-home">
+          Home
+        </div>
+        <div class="sm-page2">
+          Resume <!-- change this -->
+        </div>
+        <div class="sm-page3">
+          Projects  <!-- change this -->
+        </div>
+
+        <div class="top">
+          &nbsp;
+        </div>
+        <div class="left">
+          &nbsp;
+        </div>
+        <div class="right">
+          &nbsp;
+        </div>
+
+      </div>
+
+      <!-- --------Content Section -------------- -->
+      <hr>
+      <h2>
+        Content
+      </h2>
+      <h3>Home page</h3>
+      <p>
+        Welcome to my online portfolio! Here you will find a collection of my projects, focusing primarily on Arduino Uno and Raspberry Pi. I am passionate about creating and tinkering with electronics (also 3D printing and lasercutting etc). Through this website, I aim to share my work and share my knowledge about electronics and programming.<br>
+        <br>
+        You will also find my resume, including my experience in different fields.<br>
+        <br>
+        I want the home page to be very clean with not much content and only very minimalistic images. so the images I have uploaded will most likely be changed. 
+      </p>
+      <p>Images for the Home page</p>
+        <img src="images/Home_page_1.jpg" alt="image for homepage">
+        <img src="images/home_page_2.jpeg" alt="image for homepage">
+
+      </ul>
+      <h3>Resume</h3>
+      <p>
+        February 2023 - Present<br>
+        INTERNATIONAL SALES MANAGER<br>
+        Neuffer Fenster & Türen GmbH<br>
+        Stuttgart<br>
+        <br>
+        As an International Sales Manager at Neuffer Fenster & Türen GmbH, my role involves establishing and maintaining international customer relationships. I conduct sales discussions and consultations, both virtually and in English, to plan and execute energy-efficient renovation projects worldwide, with a particular focus on windows and doors.<br>
+        <br>
+        April 2022 - January 2023<br>
+        MASTER JOINER<br>
+        Kirnbauer Möbel- und Bauschreinerei GmbH<br>
+        Ludwigsburg<br>
+        <br>
+        Working as a Master Joiner at Kirnbauer Möbel- und Bauschreinerei GmbH, I am responsible for customer interactions and independent work. Handling larger projects, such as the renovation of a school sports hall, whether independently or in collaboration with colleagues, falls within my scope of responsibility.<br>
+        <br>
+        August 2018 - March 2022<br>
+        JOINER<br>
+        Biermann Holzbau<br>
+        Hannover<br>
+        <br>
+        Before and alongside pursuing my master's degree, I continued working at Biermann Holzbau, the company where I completed my apprenticeship. My responsibilities included manufacturing and installing windows and doors. Additionally, as part of my master's program, I underwent further training to become a "qualified electrical specialist for defined tasks."<br>
+        <br>
+        November 2013 - November 2015<br>
+        ABROAD STAY<br>
+        Voluntary Service for All Generations (for the Church of Jesus Christ) in Scotland and Ireland<br>
+        <br>
+        EDUCATION<br>
+        2021<br>
+        MASTER'S DEGREE<br>
+        Chamber of Crafts, Joinery<br>
+        Hannover<br>
+        <br>
+        The training program for "qualified electrical specialist for defined tasks" was completed as part of the master's course.<br>
+        <br>
+        2020<br>
+        COMPLETED APPRENTICESHIP<br>
+        Holzbau Biermann, Joinery<br>
+        Hannover<br>
+        <br>
+        2018<br>
+        UNIVERSITY STUDIES<br>
+        Esslingen University of Applied Sciences, Software Engineering<br>
+        <br>
+        After completing four semesters (2016-2018), I discontinued my studies to commence my apprenticeship as a joiner.<br>
+        <br>
+        2013<br>
+        GENERAL HIGHER EDUCATION ENTRANCE QUALIFICATION<br>
+        Commercial School, Economics<br>
+        Göppingen<br>
+        <br>
+        <br>
+        My skills:<br>
+        <br>
+        Cabinet Making<br>
+        Electrical Specialist for Defined Tasks<br>
+        Volunteer Youth Work<br>
+        3D Printing<br>
+        Programming<br>
+        3D CAD<br>
+        Training Aptitude in accordance with the Training and Examination Regulations for Skilled Crafts (AEVO)<br>
+        Timber Construction<br>
+        <br>
+        <br>
+        Please keep in mind that this CV is translated using AI. there are a lot of words (especially the degrees and stuff like it) that dont really translate into english that well. I will change this and rewrite this once it gets on the page. <br>
+        unrefined content: I speak english and german (english between level c1 and c2, german is my native language.) I will start working as an IT teacher in august. For this I will move to the philippines for two years. I like playing sports (mostly football(soccer) and really anything related to embedded systems (ie 3d printing, CAD, lasercutting) but also working on scooters (not the electric ones but the 50ccm ones.) and getting them to work properly. also I like watching football and F1 (also going to the events live))<br>
+
+      </p>
+      <p>Images for the Page 2</p>
+        <img src="images/resume_1.jpeg" alt="image for page">
+        <img src="images/resume_2.jpg" alt="image for page">
+
+      </ul>
+      <h3>Projects</h3>
+      <p>
+        Here I will display my projects. currently I am working on a clock that works with an attiny85 micro processor and a DS1307 RTC module. So far the attiny will display the time on a 4 digit 7 segment display and everything works great, however the communication between the attiny and the RTC module hasnt really worked yet. I dont have enough time currently to make it work properly, so this will be very rough (I am currently in the middle of moving to the philippines), however eventually I will get some custom PCBs made for this and organize a proper github page for this. I want this to be my first project. The second one is going to be a calculator based on an atmega328p (I need a micro processor with more I/O for this project to have enough space for the buttons). However this will take some time before I can upload it.<br>
+
+      </p>
+      <p>Images for the Page 3</p>
+        <img src="images/projects_1.jpeg" alt="image for page3">
+        <img src="images/projects_2.jpeg" alt="image for page3">
+
+      </ul>
+      <hr>
+      <h2>
+        Wireframes
+      </h2>
+      <p>
+        Create three wireframes for your site. One for each page and list them here</p>
+
+      <h3>Home</h3>
+      <p>         
+        It should be very self explanatory. I want the page to look very clean. Not much happening (not quite minimalistic). In the footer I will link to my github and my linkedin (this applies to all pages).
+      </p>
+      <img src="images/home-wirframe.png" alt="home page wireframe">
+      <!-- https://wireframe.cc/C3wvCe -->
+      <h3>Resume</h3>
+      <p>         
+        [Any additional details about page 2 that the wireframe does not make clear]
+      </p>
+      <img src="images/resume-wireframe.png" alt="resume wireframe">
+      <!-- https://wireframe.cc/XSlyIJ -->
+      <h3>Projects</h3>
+      <p>         
+        [Any additional details about page 3 that the wireframe does not make clear]
+      </p>
+      <img src="images/projects-wireframe.png" alt="projects wireframe">
+      <!-- https://wireframe.cc/jbbcrb -->
+    </main>
+  </body>
+
 </html>
