created the html for all 3 sites.

--- a/projects.html
+++ b/projects.html
@@ -15,27 +15,19 @@
             </a>
             <nav>
                 <a href="resume.html">resume</a>
-                <a href="projects.html">projects</a>
-                <a id="active_page" href="index.html">home</a>
+                <a id="active_page" href="projects.html">projects</a>
+                <a href="index.html">home</a>
             </nav>
         </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/home_page_hero.jpeg" alt="peaceful workplace">
-            </div>
-            <section id="hero-msg">
-                <h1 class="home-title">this is me.</h1>
-                <p>
-                    Welcome to my online portfolio! Here you will find a collection of my projects, focusing primarily on Arduino Uno and Raspberry Pi. 
-                    I am passionate about creating and tinkering with electronics (also 3D printing and lasercutting etc). 
-                    Through this website, I aim to share my work and share my knowledge about electronics and programming. <br>
-                    <br>
-                    You will also find my resume, including my experience in different fields.<br>
-                    <br>
-                    My contact details are at the bottom of the page (please contact me via LinkedIn). There youu can also find my github page with all my projects.
-                </p>
-            </section>
-        </div>
+        <main>
+            <img src="images/projects-banner.jpg" alt="banner">
+            <h1>projects.</h1>
+            <h3>digital clock based on attiny85</h3>
+            <p>
+                WORK IN PROGRESS! Currently I am working on a clock that works with an attiny85 micro processor and a DS1307 RTC module. So far the attiny will display the time on a 4 digit 7 segment display and everything works great, however the communication between the attiny and the RTC module hasn't really worked yet. I dont have enough time currently to make it work properly, however as soon as I find time for it, I will fix the communication between the two chips.
+            </p>
+            <img src="images/projects.jpeg" alt="digital clock">
+        </main>
         <footer>
             <p>about me page &copy; 2023 - Jan Zander</p>
             <p><a href="site-plan.html">site plan</a></p>
