--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>
                     Welcome to my online portfolio! Here you will find a collection of my projects, focusing primarily on Arduino Uno and Raspberry Pi. 
                     I am passionate about creating and tinkering with electronics (also 3D printing and lasercutting etc). 
-                    Through this website, I aim to share my work and share my knowledge about electronics and programming. <br>
+                    Through this website, I aim to share my work and my knowledge about electronics and programming. <br>
                     <br>
                     You will also find my resume, including my experience in different fields.<br>
                     <br>
