--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
                 <img class="logo" src="images/Dark_Mode_Icon.svg" alt="Jan Zander Logo">
             </a>
             <nav>
-                <a href="resume.html">resume</a>
-                <a href="projects.html">projects</a>
                 <a id="active_page" href="index.html">home</a>
+                <a href="projects.html">projects</a>
+                <a href="resume.html">resume</a>
             </nav>
         </header>
         <div id="hero">
@@ -32,13 +32,15 @@
                     <br>
                     You will also find my resume, including my experience in different fields.<br>
                     <br>
-                    My contact details are at the bottom of the page (please contact me via LinkedIn). There youu can also find my github page with all my projects.
+                    My contact details are at the bottom of the page (please contact me via LinkedIn). There you can also find my github page with all my projects.
                 </p>
             </section>
         </div>
         <footer>
-            <p>about me page &copy; 2023 - Jan Zander</p>
-            <p><a href="site-plan.html">site plan</a></p>
+            <div class="trademark">
+                <p>about me page &copy; 2023 - Jan Zander</p>
+                <p><a href="site-plan.html">site plan</a></p>
+            </div>
             <div class="social">
                 <a href="https://de.linkedin.com/in/jan-zander-2a58b7255?trk=people-guest_people_search-card" target="_blank">
                     <img src="images/linkedin-icon-dark-mode.svg" alt="linkedin icon">
