styled the footer

--- a/resume.html
+++ b/resume.html
@@ -14,9 +14,9 @@
                 <img class="logo" src="images/Dark_Mode_Icon.svg" alt="Jan Zander Logo">
             </a>
             <nav>
-                <a id="active_page" href="resume.html">resume</a>
-                <a href="projects.html">projects</a>
                 <a href="index.html">home</a>
+                <a href="projects.html">projects</a>
+                <a id="active_page" href="resume.html">resume</a>
             </nav>
         </header>
         <main>
@@ -122,8 +122,10 @@
             </ul>
         </main>
         <footer>
-            <p>about me page &copy; 2023 - Jan Zander</p>
-            <p><a href="site-plan.html">site plan</a></p>
+            <div class="trademark">
+                <p>about me page &copy; 2023 - Jan Zander</p>
+                <p><a href="site-plan.html">site plan</a></p>
+            </div>
             <div class="social">
                 <a href="https://de.linkedin.com/in/jan-zander-2a58b7255?trk=people-guest_people_search-card" target="_blank">
                     <img src="images/linkedin-icon-dark-mode.svg" alt="linkedin icon">
