--- a/index.html
+++ b/index.html
@@ -19,23 +19,26 @@
                 <a href="resume.html">resume</a>
             </nav>
         </header>
-        <div id="hero">
-            <div id="hero-box">
-                <img id="hero-img" src="images/home_page_hero.jpeg" alt="peaceful workplace">
+        <hr>
+        <main>
+            <div id="hero">
+                <div id="hero-box">
+                    <img id="hero-img" src="images/home_page_hero.jpeg" alt="peaceful workplace">
+                </div>
+                <section id="hero-msg">
+                    <h1 class="home-title">this is me.</h1>
+                    <p>
+                        Welcome to my online portfolio! Here you will find a collection of my projects, focusing primarily on Arduino Uno and Raspberry Pi. 
+                        I am passionate about creating and tinkering with electronics (also 3D printing and lasercutting etc). 
+                        Through this website, I aim to share my work and my knowledge about electronics and programming. <br>
+                        <br>
+                        You will also find my resume, including my experience in different fields.<br>
+                        <br>
+                        My contact details are at the bottom of the page (please contact me via LinkedIn). There you can also find my github page with all my projects.
+                    </p>
+                </section>
             </div>
-            <section id="hero-msg">
-                <h1 class="home-title">this is me.</h1>
-                <p>
-                    Welcome to my online portfolio! Here you will find a collection of my projects, focusing primarily on Arduino Uno and Raspberry Pi. 
-                    I am passionate about creating and tinkering with electronics (also 3D printing and lasercutting etc). 
-                    Through this website, I aim to share my work and my knowledge about electronics and programming. <br>
-                    <br>
-                    You will also find my resume, including my experience in different fields.<br>
-                    <br>
-                    My contact details are at the bottom of the page (please contact me via LinkedIn). There you can also find my github page with all my projects.
-                </p>
-            </section>
-        </div>
+        </main>
         <footer>
             <div class="trademark">
                 <p>about me page &copy; 2023 - Jan Zander</p>
