--- a/projects.html
+++ b/projects.html
@@ -19,14 +19,26 @@
                 <a href="resume.html">resume</a>
             </nav>
         </header>
+        <hr>
         <main>
             <img src="images/projects-banner.jpg" alt="banner">
-            <h1>projects.</h1>
-            <h3>digital clock based on attiny85</h3>
-            <p>
-                WORK IN PROGRESS! Currently I am working on a clock that works with an attiny85 micro processor and a DS1307 RTC module. So far the attiny will display the time on a 4 digit 7 segment display and everything works great, however the communication between the attiny and the RTC module hasn't really worked yet. I dont have enough time currently to make it work properly, however as soon as I find time for it, I will fix the communication between the two chips.
-            </p>
-            <img src="images/projects.jpeg" alt="digital clock">
+            <div id="projects">
+                <h1>projects.</h1>
+                <div class="project">
+                    <h3>digital clock based on attiny85</h3>
+                    <p>
+                        WORK IN PROGRESS! Currently I am working on a clock that works with an attiny85 micro processor and a DS1307 RTC module. So far the attiny will display the time on a 4 digit 7 segment display and everything works great, however the communication between the attiny and the RTC module hasn't really worked yet. I dont have enough time currently to make it work properly, however as soon as I find time for it, I will fix the communication between the two chips.
+                    </p>
+                    <img src="images/projects.jpeg" alt="digital clock">
+                </div>
+                <div class="project">
+                    <h3>digital clock based on attiny85</h3>
+                    <p>
+                        WORK IN PROGRESS! Currently I am working on a clock that works with an attiny85 micro processor and a DS1307 RTC module. So far the attiny will display the time on a 4 digit 7 segment display and everything works great, however the communication between the attiny and the RTC module hasn't really worked yet. I dont have enough time currently to make it work properly, however as soon as I find time for it, I will fix the communication between the two chips.
+                    </p>
+                    <img src="images/projects.jpeg" alt="digital clock">
+                </div>
+            </div>
         </main>
         <footer>
             <div class="trademark">
