--- a/resume.html
+++ b/resume.html
@@ -19,107 +19,138 @@
                 <a id="active_page" href="resume.html">resume</a>
             </nav>
         </header>
+        <hr>
         <main>
-            <img src="images/JanZ.png" alt="Jan Zander">
-            <h1>Jan Zander</h1>
-            <h3>IT, carpentry and international sales</h3>
-            <h2>profile.</h2>
-            <ul>
-                <li>27. July 1994 in Halle an der Saale</li>
-                <li>living near Stuttgart, Germany</li>
-            </ul>
-            <h2>languages.</h2>
-            <ul>
-                <li>German: native speaking</li>
-                <li>English: business fluent</li>
-            </ul>
-            <h2>work experience.</h2>
-            <h3>february 2023 - today</h3>
-            <h3>international sales manager</h3>
-            <h4>Neuffer Windows & Doors</h4>
-            <p>
-                Stuttgart, Germany
-            </p>
-            <p>
-                As an International Sales Manager at Neuffer Windows & Doors, my role involves establishing and maintaining international customer relationships. I conduct sales discussions and consultations, both virtually and in person, to plan and execute energy-efficient renovation projects worldwide, with a particular focus on windows and doors.
-            </p>
-            <h3>april 2022 - january 2023</h3>
-            <h3>carpenter (as bachelor professional)</h3>
-            <h4>Kirnbauer Möbel- & Bauschreinerei GmbH</h4>
-            <p>
-                Ludwigsburg, Germany
-            </p>
-            <p>
-                Working as a Master Joiner at Kirnbauer Möbel- und Bauschreinerei GmbH, I am responsible for customer interactions and independent work. Handling larger projects, such as the renovation of a school gym, whether independently or in collaboration with colleagues, falls within my scope of responsibility.
-            </p>
-            <h3>august 2018 - march 2022</h3>
-            <h3>carpenter</h3>
-            <h4>Biermann Holzbau</h4>
-            <p>
-                Hannover, Germany
-            </p>
-            <p>
-                Before and alongside pursuing my bachelor professional degree (in german called "Meister"), I continued working at Biermann Holzbau, the company where I completed my apprenticeship. My responsibilities included manufacturing and installing windows and doors. Additionally, as part of my bachelor professional, I underwent further training in the field of an electrician.
-            </p>
-            <h3>november 2013 - november 2015</h3>
-            <h3>abroad stay</h3>
-            <h4>Church of Jesus Christ</h4>
-            <p>
-                Scotland and Ireland
-            </p>
-            <h2>education.</h2>
-            <h3>since september 2022</h3>
-            <h3>bachelor in software developement</h3>
-            <h4>BYU Idaho</h4>
-            <p>
-                online studies
-            </p>
-            <p>
-                Currently I am studying software developement while working fulltime. I expect to graduate in 2026.
-            </p>
-            <h3>november 2020 - december 2021</h3>
-            <h3>bachelor professional in carpentry</h3>
-            <h4>Handwerkskammer Hannover</h4>
-            <p>
-                Hannover, Germany
-            </p>
-            <p>
-                A training program in the field of an electrician was part of the master's course.
-            </p>
-            <h3>august 2018 - july 2020</h3>
-            <h3>apprenticeship as a carpenter</h3>
-            <h4>Holzbau Biermann</h4>
-            <p>
-                Hannover, Germany
-            </p>
-            <p>
-                As my journeyman piece (in german "Gesellenstück") I built a rocking chair.
-            </p>
-            <h3>2016 - 2018</h3>
-            <h3>bachelor studies in software developement</h3>
-            <h4>Hochschule Esslingen</h4>
-            <p>
-                Esslingen, Germany
-            </p>
-            <p>
-                After completing four semesters (2016-2018), I discontinued my studies to commence my apprenticeship as a joiner.
-            </p>
-            <h3>2013</h3>
-            <h3>Abitur</h3>
-            <h4>Kaufmännische Schule Göppingen</h4>
-            <p>
-                Göppingen, Germany
-            </p>
-            <h2>skills.</h2>
-            <ul>
-                <li>Cabinet and Furniure Making </li>
-                <li>3D Printing</li>
-                <li>Programming</li>
-                <li>3D CAD</li>
-                <li>Timber Construction</li>
-                <li>Volunteer Youth Work</li>
-                <li>"Ausbilderschein" (I am trained in instructing aprentices)</li>
-            </ul>
+            <div id="resume">
+                <div class="profile">
+                    <img src="images/JanZ.png" alt="Jan Zander">
+                    <h1>Jan Zander</h1>
+                    <h3>IT, carpentry and international sales</h3>
+                    <h2>profile.</h2>
+                    <ul>
+                        <li>27. July 1994 in Halle an der Saale</li>
+                        <li>living near Stuttgart, Germany</li>
+                    </ul>
+                    <h2>languages.</h2>
+                    <ul>
+                        <li>German: native speaking</li>
+                        <li>English: business fluent</li>
+                    </ul>
+                </div>
+                <div class="work-experience">
+                    <h2>work experience.</h2>
+                    <div class="resume-section">
+                        <h3>international sales manager</h3>
+                        <h4>february 2023 - today</h4>
+                        <h4>Neuffer Windows & Doors</h4>
+                        <p>
+                            Stuttgart, Germany
+                        </p>
+                        <p>
+                            As an International Sales Manager at Neuffer Windows & Doors, my role involves establishing and maintaining international customer relationships. I conduct sales discussions and consultations, both virtually and in person, to plan and execute energy-efficient renovation projects worldwide, with a particular focus on windows and doors.
+                        </p>
+                    </div>
+                    <div class="resume-section">
+                        <h3>carpenter (as bachelor professional)</h3>
+                        <h4>april 2022 - january 2023</h4>
+                        <h4>Kirnbauer Möbel- & Bauschreinerei GmbH</h4>
+                        <p>
+                            Ludwigsburg, Germany
+                        </p>
+                        <p>
+                            Working as a Master Joiner at Kirnbauer Möbel- und Bauschreinerei GmbH, I am responsible for customer interactions and independent work. Handling larger projects, such as the renovation of a school gym, whether independently or in collaboration with colleagues, falls within my scope of responsibility.
+                        </p>
+                    </div>
+                    <div class="resume-section">
+                        <h3>carpenter</h3>
+                        <h4>august 2018 - march 2022</h4>
+                        <h4>Biermann Holzbau</h4>
+                        <p>
+                            Hannover, Germany
+                        </p>
+                        <p>
+                            Before and alongside pursuing my bachelor professional degree (in german called "Meister"), I continued working at Biermann Holzbau, the company where I completed my apprenticeship. My responsibilities included manufacturing and installing windows and doors. Additionally, as part of my bachelor professional, I underwent further training in the field of an electrician.
+                        </p>
+                    </div>
+                    <div class="resume-section">
+                        <h3>abroad stay</h3>
+                        <h4>november 2013 - november 2015</h4>
+                        <h4>Church of Jesus Christ</h4>
+                        <p>
+                            In Scotland and Ireland
+                        </p>
+                    </div>
+                </div>
+                <div class="education">
+                    <h2>education.</h2>
+                    <div class="resume-section">
+                        <h3>bachelor in software developement</h3>
+                        <h4>since september 2022</h4>
+                        <h4>BYU Idaho</h4>
+                        <p>
+                            online studies
+                        </p>
+                        <p>
+                            Currently I am studying software developement while working fulltime. I expect to graduate in 2026.
+                        </p>
+                    </div>
+                    <div class="resume-section">
+                        <h3>bachelor professional in carpentry</h3>
+                        <h4>november 2020 - december 2021</h4>
+                        <h4>Handwerkskammer Hannover</h4>
+                        <p>
+                            Hannover, Germany
+                        </p>
+                        <p>
+                            A training program in the field of an electrician was part of the master's course.
+                        </p>
+                    </div>
+                    <div class="resume-section">
+                        <h3>apprenticeship as a carpenter</h3>
+                        <h4>august 2018 - july 2020</h4>
+                        <h4>Holzbau Biermann</h4>
+                        <p>
+                            Hannover, Germany
+                        </p>
+                        <p>
+                            As my journeyman piece (in german "Gesellenstück") I built a rocking chair.
+                        </p>
+                    </div>
+                    <div class="resume-section">
+                        <h3>bachelor studies in software developement</h3>
+                        <h4>2016 - 2018</h4>
+                        <h4>Hochschule Esslingen</h4>
+                        <p>
+                            Esslingen, Germany
+                        </p>
+                        <p>
+                            After completing four semesters (2016-2018), I discontinued my studies to commence my apprenticeship as a joiner.
+                        </p>
+                    </div>
+                    <div class="resume-section">
+                        <h3>Abitur</h3>
+                        <h4>2013</h4>
+                        <h4>Kaufmännische Schule Göppingen</h4>
+                        <p>
+                            Göppingen, Germany
+                        </p>
+                    </div>
+                </div>
+                <div class="skills">
+                    <h2>skills.</h2>
+                    <div class="resume-section">
+                        <ul>
+                            <li>Cabinet and Furniure Making </li>
+                            <li>3D Printing</li>
+                            <li>Programming</li>
+                            <li>3D CAD</li>
+                            <li>Timber Construction</li>
+                            <li>Volunteer Youth Work</li>
+                            <li>"Ausbilderschein" (I am trained in instructing aprentices)</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <div class="trademark">
