--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jan Zander | Home</title>
-    <link rel="icon" type="image/x-icon" href="/images/Dark_Mode_Icon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/icons/Dark_Mode_Icon.svg">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/Dark_Mode_Icon.svg" alt="Jan Zander Logo">
+                <img class="logo" src="images/icons/Dark_Mode_Icon.svg" alt="Jan Zander Logo">
             </a>
             <nav>
                 <a id="active_page" href="index.html">home</a>
@@ -47,10 +47,10 @@
             </div>
             <div class="social">
                 <a href="https://de.linkedin.com/in/jan-zander-2a58b7255?trk=people-guest_people_search-card" target="_blank">
-                    <img src="images/linkedin-icon-dark-mode.svg" alt="linkedin icon">
+                    <img src="images/social/linkedin-icon-dark-mode.svg" alt="linkedin icon">
                 </a>
                 <a href="https://github.com/inoffensiveLama" target="_blank">
-                    <img src="images/github-icon-dark-mode.svg" alt="github icon">
+                    <img src="images/social/github-icon-dark-mode.svg" alt="github icon">
                 </a>
             </div>
         </footer>
