--- a/projects.html
+++ b/projects.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jan Zander | Home</title>
-    <link rel="icon" type="image/x-icon" href="/images/Dark_Mode_Icon.svg">
+    <link rel="icon" type="image/x-icon" href="/images/icons/Dark_Mode_Icon.svg">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/Dark_Mode_Icon.svg" alt="Jan Zander Logo">
+                <img class="logo" src="images/icons/Dark_Mode_Icon.svg" alt="Jan Zander Logo">
             </a>
             <nav>
                 <a href="index.html">home</a>
@@ -22,7 +22,7 @@
         </header>
         <hr>
         <main>
-            <img src="images/projects-banner.jpg" alt="banner">
+            <img src="images/projects/projects-banner.jpg" alt="banner">
             <div id="projects">
                 <h1>projects.</h1>
                 <div class="project">
@@ -30,14 +30,23 @@
                     <p>
                         WORK IN PROGRESS! Currently I am working on a clock that works with an attiny85 micro processor and a DS1307 RTC module. So far the attiny will display the time on a 4 digit 7 segment display and everything works great, however the communication between the attiny and the RTC module hasn't really worked yet. I dont have enough time currently to make it work properly, however as soon as I find time for it, I will fix the communication between the two chips.
                     </p>
-                    <img src="images/projects.jpeg" alt="digital clock">
+                    <img src="images/projects/projects.jpeg" alt="digital clock">
                 </div>
                 <div class="project">
-                    <h3>digital clock based on attiny85</h3>
+                    <h3>hextrays</h3>
                     <p>
-                        WORK IN PROGRESS! Currently I am working on a clock that works with an attiny85 micro processor and a DS1307 RTC module. So far the attiny will display the time on a 4 digit 7 segment display and everything works great, however the communication between the attiny and the RTC module hasn't really worked yet. I dont have enough time currently to make it work properly, however as soon as I find time for it, I will fix the communication between the two chips.
+                        I have modeled these a while ago. We mostly use them for boardgames, just to organize everything on the table. But you could use them for basically anything (screws, bolts, small parts, desk organisation, etc). They are available in different layouts (or rather different amount of trays attached to each other).
                     </p>
-                    <img src="images/projects.jpeg" alt="digital clock">
+                    <a href="https://www.thingiverse.com/thing:6094142">Thingiverse</a>
+                    <img src="images/projects/hextrays.jpeg" alt="hextrays">
+                </div>
+                <div class="project">
+                    <h3>soapholder</h3>
+                    <p>
+                        This is a simple soap holder I have modeled. simply put it in the bathroom onto the sink, and put your bar of soap onto it. That way it won't get all mushy.
+                    </p>
+                    <a href="https://www.thingiverse.com/thing:4774986">Thingiverse</a>
+                    <img src="images/projects/soapholder.jpeg" alt="soapholder">
                 </div>
             </div>
         </main>
@@ -48,10 +57,10 @@
             </div>
             <div class="social">
                 <a href="https://de.linkedin.com/in/jan-zander-2a58b7255?trk=people-guest_people_search-card" target="_blank">
-                    <img src="images/linkedin-icon-dark-mode.svg" alt="linkedin icon">
+                    <img src="images/social/linkedin-icon-dark-mode.svg" alt="linkedin icon">
                 </a>
                 <a href="https://github.com/inoffensiveLama" target="_blank">
-                    <img src="images/github-icon-dark-mode.svg" alt="github icon">
+                    <img src="images/social/github-icon-dark-mode.svg" alt="github icon">
                 </a>
             </div>
         </footer>
