--- a/site-plan.html
+++ b/site-plan.html
@@ -30,7 +30,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="images/logo_dark.png" alt="Logo image">
+      <img src="images/icons/logo_dark.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -131,8 +131,8 @@
         I want the home page to be very clean with not much content and only very minimalistic images. so the images I have uploaded will most likely be changed. 
       </p>
       <p>Images for the Home page</p>
-        <img src="images/Home_page_1.jpg" alt="image for homepage">
-        <img src="images/home_page_2.jpeg" alt="image for homepage">
+        <img src="images/home/Home_page_1.jpg" alt="image for homepage">
+        <img src="images/home/home_page_hero.jpeg" alt="image for homepage">
 
       </ul>
       <h3>Resume</h3>
@@ -204,8 +204,8 @@
 
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/resume_1.jpeg" alt="image for page">
-        <img src="images/resume_2.jpg" alt="image for page">
+        <img src="images/resume/resume_1.jpeg" alt="image for page">
+        <img src="images/resume/resume_2.jpg" alt="image for page">
 
       </ul>
       <h3>Projects</h3>
@@ -214,8 +214,8 @@
 
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/projects_1.jpeg" alt="image for page3">
-        <img src="images/projects_2.jpeg" alt="image for page3">
+        <img src="images/projects/projects_1.jpeg" alt="image for page3">
+        <img src="images/projects/projects_2.jpeg" alt="image for page3">
 
       </ul>
       <hr>
@@ -229,19 +229,19 @@
       <p>         
         It should be very self explanatory. I want the page to look very clean. Not much happening (not quite minimalistic). In the footer I will link to my github and my linkedin (this applies to all pages).
       </p>
-      <img src="images/home-wirframe.png" alt="home page wireframe">
+      <img src="images/wireframes/home-wirframe.png" alt="home page wireframe">
       <!-- https://wireframe.cc/C3wvCe -->
       <h3>Resume</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="images/resume-wireframe.png" alt="resume wireframe">
+      <img src="images/wireframes/resume-wireframe.png" alt="resume wireframe">
       <!-- https://wireframe.cc/XSlyIJ -->
       <h3>Projects</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="images/projects-wireframe.png" alt="projects wireframe">
+      <img src="images/wireframes/projects-wireframe.png" alt="projects wireframe">
       <!-- https://wireframe.cc/jbbcrb -->
     </main>
   </body>
