added link to thingiverse profile

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
                 <a href="https://github.com/inoffensiveLama" target="_blank">
                     <img src="images/social/github-icon-dark-mode.svg" alt="github icon">
                 </a>
+                <a href="https://www.thingiverse.com/inoffensivellama/designs" target="_blank">
+                    <img src="images/social/thingiverse logo.svg" alt="thingiverse icon">
+                </a>
             </div>
         </footer>
     </div>
