fixed some wrong image links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <main>
             <div id="hero">
                 <div id="hero-box">
-                    <img id="hero-img" src="images/home_page_hero.jpeg" alt="peaceful workplace">
+                    <img id="hero-img" src="images/home/home_page_hero.jpeg" alt="peaceful workplace">
                 </div>
                 <section id="hero-msg">
                     <h1 class="home-title">this is me.</h1>
