changed layout of author

--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@
         </main>
         <footer>
             <div class="trademark">
-                <p>about me page &copy; 2023 - Jan Zander</p>
+                <p>about me page &copy; 2023<br>Jan Zander</p>
                 <p><a href="site-plan.html">site plan</a></p>
             </div>
             <div class="social">
